# facts-total

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: container-dev.yaml
src/facts_total/: cli.py  total_workflow.py
